--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "paths": {
+      "store":["src/app/app.store.ts"]
+    },
     "declaration": false,
     "module": "es2015",
     "moduleResolution": "node",
