--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.2.0",
     "@ionic/storage": "^2.2.0",
+    "@types/color": "^3.0.0",
+    "color": "^3.1.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -36,7 +38,7 @@
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "firebase": "^5.8.6",
-    "ionic": "^4.2.0",
+    "ionic": "^4.12.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
