--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "short_name": "app",
+  "name": "Todo Ionic App",
+  "short_name": "Todo App",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
