--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
       "store":["src/app/app.store.ts"]
     },
     "declaration": false,
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es5",
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
