--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/my-project
+    working_directory: ~/src
     docker:
-      - image: circleci/node:8-browsers
+      - image: circleci/node:12.4.0-browsers
     steps:
       - checkout
       - restore_cache:
