store, effects, router initial setup ngrx

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "@ngrx/effects": "^8.3.0",
+    "@ngrx/router-store": "^8.3.0",
+    "@ngrx/store": "^8.3.0",
+    "@ngrx/store-devtools": "^8.3.0",
     "@types/color": "^3.0.0",
     "color": "^3.1.1",
     "cordova-android": "7.1.4",
