--- a/package.json
+++ b/package.json
@@ -13,66 +13,67 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.2",
-    "@angular/core": "^8.0.2",
-    "@angular/fire": "^5.1.2",
-    "@angular/forms": "^8.0.2",
-    "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^8.0.2",
-    "@angular/platform-browser-dynamic": "^8.0.2",
-    "@angular/pwa": "^0.12.4",
-    "@angular/router": "^8.0.2",
-    "@angular/service-worker": "^8.0.2",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
+    "@angular/common": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/fire": "^5.2.3",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/pwa": "^0.803.19",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "^8.2.14",
+    "@ionic-native/core": "^5.16.0",
+    "@ionic-native/splash-screen": "^5.16.0",
+    "@ionic-native/status-bar": "^5.16.0",
+    "@ionic/angular": "^4.11.4",
     "@ionic/storage": "^2.2.0",
-    "@ngrx/effects": "^8.3.0",
-    "@ngrx/router-store": "^8.3.0",
-    "@ngrx/store": "^8.3.0",
-    "@ngrx/store-devtools": "^8.3.0",
+    "@ngrx/effects": "^8.5.1",
+    "@ngrx/router-store": "^8.5.1",
+    "@ngrx/store": "^8.5.1",
+    "@ngrx/store-devtools": "^8.5.1",
     "@types/color": "^3.0.0",
-    "color": "^3.1.1",
-    "cordova-android": "7.1.4",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^3.1.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "3.2.0",
-    "core-js": "^2.5.4",
-    "firebase": "^5.8.6",
-    "ionic": "^4.12.0",
-    "rxjs": "~6.5.2",
-    "zone.js": "~0.9.1"
+    "color": "^3.1.2",
+    "cordova-android": "8.1.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "3.4.0",
+    "core-js": "^3.4.1",
+    "firebase": "^7.3.0",
+    "ionic": "^5.4.6",
+    "rxjs": "~6.5.3",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.800.3",
-    "@angular-devkit/core": "~7.2.3",
-    "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~8.0.3",
-    "@angular/compiler": "~8.0.2",
-    "@angular/compiler-cli": "~8.0.2",
-    "@angular/language-service": "~8.0.2",
-    "@ionic/angular-toolkit": "~1.4.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.0",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/architect": "~0.803.19",
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular-devkit/core": "~8.3.19",
+    "@angular-devkit/schematics": "~8.3.19",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@ionic/angular-toolkit": "~2.1.1",
+    "@ionic/app-scripts": "^3.2.4",
+    "@types/jasmine": "~3.4.6",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.12.7",
+    "codelyzer": "~5.2.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~8.0.0",
-    "tslint": "~5.12.0",
-    "typescript": "~3.4.5"
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.5.0",
+    "tslint": "~5.20.1",
+    "typescript": "^3.5.3"
   },
   "description": "An Ionic project",
   "cordova": {
